# plants

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile.toml  README.md  docker-compose.yaml  index.html  schema.graphql  sqlx-data.json  tailwind.config.js
.env/: app.dev.env  common.env  db.dev.env
backend/: Cargo.toml
backend/sql/migrations/: 20220411234348_001_schema.down.sql  20220411234348_001_schema.up.sql
backend/src/: db.rs  env.rs  main.rs
backend/src/routes/: graphql.rs  home.rs  mod.rs
backend/src/schema/: location.rs  mod.rs  person.rs  plant.rs  query.rs  watering_event.rs
common/: Cargo.toml
common/src/: lib.rs  location.rs  person.rs  plant.rs
common/src/models/: mod.rs  plant.rs
docker/: app.Dockerfile  tailwind.Dockerfile
env/: app.dev.env  common.env  db.dev.env
frontend/: Cargo.toml  Trunk.toml  index.html  tailwind.config.js
frontend/src/: main.rs  store.rs
frontend/src/api/: queries.rs  types.rs
frontend/src/api/graphql/: locationById.graphql  locations.graphql  people.graphql  personById.graphql  plantById.graphql  plants.graphql  watering_eventById.graphql  watering_events.graphql
frontend/src/api/queries/: locations.rs  people.rs  plants.rs  watering_events.rs
frontend/src/components/: icon.rs  input.rs  layout_page.rs  mod.rs  modal.rs  plant_card.rs  plant_new.rs  plant_preview.rs
frontend/src/data/: model.json
frontend/src/lib/: mock_data.rs
frontend/src/util/: mock_data.rs
frontend/styles/: tailwind.css
scripts/: app.local.sh  database-url.sh  tailwind.build.sh
src/: main.rs
src/components/: layout_page.rs  mod.rs  plant_preview.rs
styles/: index.css
