[package]
name = "backend"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/thebearjew/plantbook"

[dependencies]
anyhow = "1.0.65"
async-graphql = "4.0.15"
axum = "0.5.16"
chrono = { version = "0.4.22", features = ["serde"] }
chrono-tz = { version = "0.6.3", features = ["serde"] }
common = { version = "0.1.0", path = "../common" }
project-root = "0.2.2"
serde = { version = "1.0.145", features = ["derive"] }
sqlx = { version = "0.6.2", features = [
  "runtime-tokio-rustls",
  "postgres",
  "chrono",
  "uuid",
  "offline",
] }
strum = { version = "0.24.1", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.2.1", features = ["serde", "v4"] }
