[package]
name = "backend"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/thebearjew/plantbook"

[dependencies]
anyhow = "1.0.57"
async-graphql = "3.0.38"
axum = "0.5.3"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = { version = "0.6.1", features = ["serde"] }
common = { path = "../common" }
serde = { version = "1.0.136", features = ["derive"] }
sqlx = { version = "0.5.13", features = [
  "runtime-tokio-rustls",
  "postgres",
  "chrono",
  "uuid",
  "offline",
] }
strum = { version = "0.24.0", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
uuid = { version = "1.0.0", features = ["serde", "v4"] }
