[package]
name = "backend"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/thebearjew/plantbook"

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true }
axum = "0.5.16"
chrono = { workspace = true }
chrono-tz = { workspace = true }
common = { version = "0.1.0", path = "../common" }
project-root = "0.2.2"
serde = { workspace = true }
sqlx = { version = "0.6.2", features = [
  "runtime-tokio-rustls",
  "postgres",
  "chrono",
  "uuid",
  "offline",
] }
strum = { workspace = true }
tokio = { version = "1.21.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { workspace = true }
