[package]
name = "common"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/thebearjew/plantbook"

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
yew_form = { workspace = true }
yew_form_derive = { workspace = true }
