[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/thebearjew/plantbook"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Internal
common = { version = "0.1.0", path = "../common" }

# External
boolinator = { version = "2.0" }
bounce = { git = "https://github.com/futursolo/bounce.git", rev = "6fee754bcc2685442f508f19fe3b0e7d0914c8e5" }
chrono = { version = "0.4.19", features = [
  "serde",
  "wasmbind",
] } # Chrono for date diffing -> consider changing this as it is no longer maintained
getrandom = { version = "0.2.3", features = [
  "js",
] } # This is a dependency of rand which requries the js feature to work
gloo = { version = "0.5" }
gloo-utils = { version = "0.1" }
graphql_client = { version = "0.10" }
rand = { version = "0.8.4" }
reqwasm = { version = "0.4.0" }
serde = { version = "^1.0", features = ["derive"] }
strum = { version = "0.23", features = ["derive"] }
wasm-bindgen = { version = "0.2.67" }
wasm-logger = { version = "0.2" } # Logging for WASM applications
yew = { version = "0.19.3" }
yew_form = { git = "https://github.com/thebearjew/yew_form", branch = "master" }
yew_form_derive = { git = "https://github.com/thebearjew/yew_form", branch = "master" }

[dependencies.web-sys]
version = "0.3"
features = [
  "Element",
  "EventTarget",
  "Document",
  "HtmlHeadElement",
  "HtmlDivElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "SvgElement",
]
