[package]
name = "frontend"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/thebearjew/plantbook"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Internal
common = { version = "0.1.0", path = "../common" }

# External
boolinator = "2.4.0"
bounce = { git = "https://github.com/futursolo/bounce.git", rev = "6fee754bcc2685442f508f19fe3b0e7d0914c8e5" }
chrono = { workspace = true, features = [
  "wasmbind",
] } # Chrono for date diffing -> consider changing this as it is no longer maintained
getrandom = { version = "0.2.7", features = [
  "js",
] } # This is a dependency of rand which requries the js feature to work
gloo = "0.8.0"
gloo-utils = "0.1.5"
graphql_client = "0.11.0"
rand = "0.8.5"
# TODO: @ Jacob - Remove this in favor of its replacement which is gloo::net
reqwasm = "0.5.0"
serde = { workspace = true }
strum = { workspace = true }
wasm-bindgen = "0.2.83"
wasm-logger = "0.2.0"
yew = "0.19.3"
yew_form = { workspace = true }
yew_form_derive = { workspace = true }

[dependencies.web-sys]
version = "0.3.60"
features = [
  "Element",
  "EventTarget",
  "Document",
  "HtmlHeadElement",
  "HtmlDivElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "HtmlTextAreaElement",
  "SvgElement",
]
